--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,3 +215,25 @@ input[type=submit] {
   background: #4aaaa5;
   border: 0 none;
 }
+
+
+/* Media Querys */
+/* 980px */
+
+@media screen and (max-width: 980px){
+
+nav{
+  margin-right:40px;
+}
+#logo{
+  margin-left:30px;
+
+}
+.main-section{
+  width:70%;
+  font-size:95%;
+  margin-left:30px;
+
+}
+
+}
